# PerformanceInvestigations

./: .gitattributes  .gitignore  .gitmodules  CMakeClang.json  CMakeClangPresets.json  CMakeClangPure.json  CMakeLinuxPresets.json  CMakeLists.txt  CMakeMSVCPresets.json  CMakeVS2022Presets.json  Caches.md  PGO.txt  PRESENTATION.md  README.md  VTuneLinux.md  VTuneWindow.md  VTuneWindows.md  benchmark_clang_output.txt  benchmark_gcc_output.txt  build_gcc.sh  build_linux.sh  build_wasm.sh  platform.h  run_clang.sh  run_gcc.sh  scratch.cpp  wasm_run.sh
absolute/: CMakeLists.txt  benchmark.cpp  general.cpp  threadpool.hpp
baseline/: CMakeLists.txt  benchmark.cpp  perf.sh
baseline_nonpower/: CMakeLists.txt  benchmark.cpp  grind.cpp
best/: CMakeLists.txt  benchmark.cpp
blocked/: CMakeLists.txt  benchmark.cpp
blocked_column/: CMakeLists.txt  benchmark.cpp
blocked_column_multi_output/: CMakeLists.txt
csharp/: CMakeLists.txt  CSAbsoluteAVX.cs  CSBaseline.cs  CSBestAVX.cs  CSBlockedColumnMultiOuputAVX.cs  CSBlockedColumnMultiOutput.cs  CSBlockedColumnMultiOutputAVX.cs  README.md  build.sh
csharp/AOT/: Program.cs  build.sh
doc/: benchmark_results.csv  benchmark_wasm_output.txt  dummy.txt
doc/plots/: all.py  allinv.py  cscpp.py  nonpower.py
general/: CMakeLists.txt  benchmark.cpp
gso/: CMakeLists.txt  benchmark.cpp
linux/: spsMacros.h  stuff.sh
mkl/: CMakeLists.txt  mkl_sgemm.cpp
multi_output/: CMakeLists.txt  benchmark.cpp  grind.cpp
multi_output_accumulate/: CMakeLists.txt  benchmark.cpp
results/: vtune-baseline.txt  vtune-blocked-column-multi-output-accumulate.txt  vtune-blocked-column-multi-output.txt
signed/: CMakeLists.txt  benchmark.cpp  distance.cpp  distance2.cpp  distance3.cpp
working/: CMakeLists.txt  benchmark.cpp
